src/components/shared/Proof/Proof.module.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');

.Proof {
	margin: 10px 0;
	max-width: 730px;
}

.Proof p {
	white-space: pre-wrap;
	overflow: hidden;
	text-overflow: ellipsis;
}
.General {
	display: flex;
	flex-direction: column;
	max-width: 350px;
	height: 400px;
	gap: 20px;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
	border-radius: 10px;
	background-color: #ffffff;
	border-radius: 10px;
}

.ProofTitle {
	background-color: var(--primary);
	border-radius: 10px 10px 0 0;
	height: 40%;
	padding: 10px;
	display: flex;
	flex-direction: column;
	width: 100%;
}

.title {
	display: flex;
	gap: 20px;
	align-items: center;
	flex: 1;
}

.title p {
	font-family: 'Quicksand', sans-serif;
	font-size: 30px;
	color: #ffffff;
	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}
.title img {
	margin: 0 7px;
}

.summary {
	padding: 10px 20px;
	font-size: 24px;
	width: 100%;
}

.timeStamp {
	display: flex;
	gap: 5px;
	align-items: center;
}

.controls {
	display: flex;
	justify-content: space-between;
	color: rgba(0, 0, 0, 0.54);
	font-size: 15px;
}

.talentsControls {
	display: flex;
	gap: 10px;
	align-self: flex-end;
}

.status {
	text-transform: lowercase;
	align-self: end;
	border-radius: 30px;
	padding: 5px 10px;
	color: rgba(97, 97, 97, 1);
}

.HIDDEN {
	background-color: rgba(203, 203, 203, 0.87);
}

.DRAFT {
	background-color: rgba(255, 191, 91, 0.87);
}

.PUBLISHED {
	background-color: rgba(185, 255, 196, 0.87);
}

.content {
	padding: 10px;
}

